Fri Jul 25 02:05:20 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Server.cpp: Changes to allow the thread creation
	  flags to be specified from the command line.  Removed some code
	  that was used to track down memory leaks.

	* server/HTTP_Helpers.{h,cpp}: Added another method 
	  HTTP_date (char *), so that a buffer to which the date will be
	  written to can be passed into the HTTP_date routine.

	* server/HTTP_Response.cpp: Changed some code so that the baseline
	  implementation can be created at compile time.

	* server/IO.cpp: Changed some code so that the baseline
	  implementation can be created at compile time.

	* server/main.cpp: Changed the signal handler to wait for threads
	  to die.  However, this code will remain dormant for now, until
	  we design a nice way to shut down a thread pool.

	* server/svc.conf: Changes to add some other entries people can
	  try.

	* server/Makefile: Changes to allow JAWS to be built with static
	  linking only, to ease the process of using Purify and Quantify.
	  Dynamic linking will be re-configured in the future when we have
	  all the memory leaks worked out.

Mon Jul 22 16:55:00 1997  Chris Cleeland <cleeland@cs.wustl.edu>

	* Changed references to WRAPPER_ROOT to ACE_ROOT in every
	  place except ChangeLog entries.

Mon Jul 21 15:09:03 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Server.{h,cpp}: Got rid of Solaris specific
	  debugging code (thr_create, thr_join).

Fri Jul 11 02:15:12 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Response.cpp: Changes so that the HEADER is not
	  rebuilt all the time.

	* server/IO.cpp (JAWS_Synch_IO::transmit_file): Changed to use
	  writev () instead of multiple send ()s.

Thu Jul 10 01:53:48 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* server/HTTP_Helpers.{h,cpp}: Changed so that creating the date
	  header is less expensive.

	* server/HTTP_Response.cpp: Changes to match above.
